# gnome-credentials

./: .dir-locals.el  .gitmodules  Makefile.am  README  autogen.sh  configure.ac  gnome-credentials.anjuta  gnome-credentials.doap  gnome-credentials.spec
data/: Makefile.am  app-menu.ui  application.css  gpg-add-subkey.ui  gpg-add-user-id.ui  gpg-edit-subkey-widget.ui  gpg-edit-user-id-widget.ui  gpg-editor-widget.ui  gpg-editor.ui  gpg-expires.ui  gpg-fetcher-dialog.ui  gpg-fetcher.ui  gpg-generator.ui  key-generator-menu.ui  list-panel.ui  main.ui  menu.ui  org.gnome.Credentials.appdata.xml.in  org.gnome.Credentials.busname  org.gnome.Credentials.desktop.in  org.gnome.Credentials.gresource.xml  org.gnome.Credentials.gschema.xml  org.gnome.Credentials.service.in  secret-editor.ui  ssh-editor.ui  ssh-generator.ui
data/icons/: Makefile.am  render-symbolic.rb
data/ui/: app-menu.ui  gpg-add-subkey-dialog.ui  gpg-edit-subkey-widget.ui  gpg-edit-user-id-widget.ui  gpg-editor-widget.ui  gpg-fetcher-dialog.ui  list-panel.ui  menu.ui  secret-editor-dialog.ui  secret-generator-dialog.ui  selection-menu.ui  ssh-editor-dialog.ui  ssh-generator-dialog.ui  window.ui
egg/: Makefile.am  egg-private.h  egg-secure-entry-buffer.c  egg-secure-entry-buffer.h
flatpak/: org.gnome.Credentials.json
gpgme-glib/: .gitignore  Gpgme.metadata  Makefile.am  README.md  gpgme-glib-enums.h  gpgme-glib-enumtypes.c.template  gpgme-glib.c  gpgme-glib.doap  gpgme-glib.h  gpgme-glib.m4
gpgme-glib/gpgme-glib/: gpgme-glib-enums.h  gpgme-glib-enumtypes.h.template  gpgme-glib.c  gpgme-glib.h
po/: POTFILES.in  POTFILES.skip  it.po
src/: Makefile.am  backend.vala  config.vapi  editor.vala  extra.vapi  gcrypt.vapi  generator.vala  gpg-backend.vala  gpg-edit-helper.vala  gpg-editor.vala  gpg-fetcher.vala  gpg-generator.vala  gpg-helper.vala  gpg-utils.vala  gpg-view-adapter.vala  gpg-widget-factory.vala  key-list-panel.vala  list-box-helper.vala  list-panel.vala  main.vala  model-button.vala  password-list-panel.vala  pkcs11-backend.vala  pkcs11-private-key.vala  pkcs11-view-adapter.vala  secret-backend.vala  secret-editor.vala  secret-entry.vala  secret-generator.vala  secret-schema.vala  secret-view-adapter.vala  secret-widget-factory.vala  ssh-backend.vala  ssh-editor.vala  ssh-generator.vala  ssh-helper.vala  ssh-parser.vala  ssh-view-adapter.vala  ssh-widget-factory.vala  utils.vala  (+3 more)
